Issue #7813 fix: Show toast message if the keys overflow on third row

--- a/org.ekstep.keyboard-1.1/renderer/style/style.css
+++ b/org.ekstep.keyboard-1.1/renderer/style/style.css
@@ -135,8 +135,6 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 34px;    
-  max-height: 65px;
-  height: 65px;
 }
 
 #thirdRowAlpha {
